--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@ body {
     
 }
 /* Header */
+header {
+    position: relative;
+}
+
 .ita {
     margin-top: 7px;
     font-family: 'Italianno', cursive;
@@ -25,12 +29,12 @@ body {
     padding-top: 8px;
    
     
-    
     background-color: #F2D7EB;
     box-shadow: 0px 4px 4px #F2D7EB;
 }
 
 .image {
+    
     width: 100%;
     height: 98px;
 }
@@ -39,9 +43,7 @@ body {
     margin-top: 46px;
     width: 100%;
     object-fit: contain;
-    
     box-shadow: 0px 4px 4px #F2D7EB;
-    
 }
 
 a img{
@@ -50,7 +52,23 @@ a img{
     color: #B06FE3;
 }
 
+.presentation {
+    position: absolute;
+    top: 80%;
+    
+    width: 100%;
+    text-align: center;
+}
 
+.presentation p {
+   
+    font-family: 'Italianno', cursive;
+    font-size: 24px;
+    text-align: center;
+    width: 160px;
+    margin: auto;
+
+}
 
 .box{
 
@@ -178,5 +196,33 @@ a img{
 
     a img {
         height: 40px;
+    }
+}
+
+@media screen and (min-width: 850px) {
+
+    .container {
+        margin-top: 340px;
+    }
+}
+
+@media screen and (min-width: 1215px) {
+
+    .container {
+        margin-top: 450px;
+    }
+}
+
+@media screen and (min-width: 1550px) {
+
+    .container {
+        margin-top: 540px;
+    }
+}
+
+@media screen and (min-width: 1805px) {
+
+    .container {
+        margin-top: 640px;
     }
 }
