--- a/src/styles.css
+++ b/src/styles.css
@@ -143,11 +143,21 @@ a img{
         margin-bottom: 60px;
     }
 }
-
+@media screen and (min-width: 530px) {
+    .presentation p {
+        margin-top: 25px;
+        font-size: 32px;
+    }
+}
 @media screen and (min-width: 630px) {
 
     .ita {
         font-size: 32px;
+    }
+    .presentation p {
+        font-size: 36px;
+        margin-top: 35px;
+        width: 200px;
     }
 
     .inspi {
@@ -206,7 +216,20 @@ a img{
     }
 }
 
+@media screen and (min-width: 900px) {
+
+    .presentation p {
+        margin-top: 80px;
+    }
+}
+
 @media screen and (min-width: 1215px) {
+
+    .presentation p {
+        font-size: 55px;
+        width: 300px;
+        margin-top: 90px;
+    }
 
     .container {
         margin-top: 450px;
@@ -215,12 +238,50 @@ a img{
 
 @media screen and (min-width: 1550px) {
 
+    .presentation p {
+        margin-top: 130px;
+    }
+
     .container {
         margin-top: 540px;
+    }
+
+    .box {
+        width: 460px;
+        height: 394px;
+    }
+
+    .card-img {
+        margin-top: 0px;
+        width: 460px;
+        height: 394px;
+    }
+    
+    .card-img img {
+        width: 460px;
+        height: 394px;
+    }
+
+    .text-card {
+        height: 96px;
+    }
+
+    .txt {
+        font-size: 50px;
+    }
+
+    .annee {
+        font-size: 40px;
     }
 }
 
 @media screen and (min-width: 1805px) {
+
+    .presentation p {
+        margin-top: 145px;
+        font-size: 70px;
+        width: 350px;
+    }
 
     .container {
         margin-top: 640px;
